# Mpi

./: .gitignore  CMakeLists.txt  Mpi.sln  README.md  gpi.cpp  perfomance.cpp  pi.cpp  read.cpp
Fortran/: CMakeLists.txt  pi.f90
Pi/: Pi.cpp  Pi.vcxproj  Pi.vcxproj.filters
